# DevilsDozen

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
database/migrations/: add_alien_invasion_fields.sql  add_knucklebones_fields.sql
docs/: ARCHITECTURE.md  CONTEXT_DATABASE.md  CONTEXT_GAME_ENGINE.md  CONTEXT_REALTIME.md  CONTEXT_UI.md  GAME_MODE_IMPLEMENTATION_GUIDE.md  NEW_GAME_MODE_TEMPLATE.md  PRD.md  TESTING_STRATEGY.md  schema.sql
src/: __init__.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  client.py  game_state.py  lobby.py  models.py  player.py
src/engine/: __init__.py  alchemists_ascent.py  alien_invasion.py  base.py  knucklebones.py  peasants_gamble.py  pig.py  validators.py
src/realtime/: __init__.py  events.py  subscriptions.py  sync_manager.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  dice_tray.py  dice_tray_alien.py  knucklebones_board.py  lobby.py  scoreboard.py  tug_of_war.py  turn_controls.py
src/ui/pages/: __init__.py  game.py  home.py  results.py
src/ui/themes/: __init__.py  animations.py  medieval.css  sounds.py
src/ui/views/: __init__.py  game.py  home.py  results.py
tests/: __init__.py  conftest.py
tests/engine/: __init__.py  test_alchemists_ascent.py  test_alien_invasion.py  test_base.py  test_knucklebones.py  test_peasants_gamble.py  test_pig.py
tests/realtime/: test_events.py  test_subscriptions.py  test_sync_manager.py
