[project]
name = "devils-dozen"
version = "0.1.0"
description = "A medieval-themed multiplayer dice game with two game modes"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Devil's Dozen Team"}
]
keywords = ["game", "dice", "multiplayer", "streamlit"]

[project.urls]
Repository = "https://github.com/yourusername/devils-dozen"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
